# vsm-rs

./: .gitignore  AGENTS.md  CODEX.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  USAGE.md
docs/: ARCHITECTURE.md  DEVELOPERS.md  USAGE.md
docs/adr/: 0000-template.md  0001-clean-breaking-migration-posture.md  0002-application-type-family-and-role-contracts.md  0003-system1-runtime-semantics.md  0004-protocol-boundaries-and-deferred-decisions.md  0005-system2-coordination-policy.md  0006-system3-role-boundary.md  0007-system4-intelligence-boundary.md  0008-system5-policy-boundary.md  0009-variety-algedonic-temporal-boundary.md  0010-operational-recursion-boundary.md  README.md
examples/: basic_usage.rs  typed_runtime_builder.rs
src/: actor_support.rs  app.rs  builder.rs  cancellation.rs  config.rs  domain.rs  error.rs  lib.rs  main.rs  names.rs  prelude.rs  runtime.rs  telemetry_reporter.rs  util.rs  vsm_core.rs
src/channels/: algedonic_channel.rs  audit_channel.rs  broker.rs  command_channel.rs  coordination_channel.rs  mod.rs  supervisor.rs  temporal_variety.rs
src/kernel/: event_bus.rs  mod.rs  recursion.rs  registry.rs  system1.rs  system2.rs  system3.rs  system4.rs  system5.rs  variety.rs
tests/: foundational_types.rs  full_system_flow.rs  phase0_characterization.rs  recursion_typed_runtime.rs  role_contracts.rs  runtime_builder.rs  system1_flow.rs  system1_typed_runtime.rs  system2_typed_runtime.rs  system3_typed_runtime.rs  system4_typed_runtime.rs  system5_typed_runtime.rs  variety_algedonic_temporal_runtime.rs
(+87 files in other folders)
