[package]
name = "vsm-ractor-full"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
# ractor-supervisor 0.1.9 depends on ractor ^0.14.3.
ractor = { version = "0.14.3", features = ["async-trait"] }
ractor-supervisor = "0.1.9"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1"

[dev-dependencies]
serial_test = "3"
